<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="title">Playlist maker</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="text_settings_share">Поделиться приложением</string>
    <string name="text_settings_support">Написать в поддержку</string>
    <string name="text_settings_agreements">Пользовательское соглашение</string>
    <string name="text_settings_header">Настройки</string>
    <string name="text_settings_switch">Тёмная тема</string>
    <string name="description_image_arrow_back_settings_screen">Кнопка возврата на главный экран</string>
    <string name="text_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="text_search">Поиск</string>
    <string name="description_clear_edit_text_button">clear_edit_text_button</string>
    <string name="magnifier_image_for_edittext">magnifier_image_for_edittext</string>
    <string name="email_address">manualcheg@yandex.ru</string>
    <string name="url_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="tools_tint_artist_name">Имя исполнителя</string>
    <string name="tools_tint_track_time">01:22</string>
    <string name="tools_tint_song_name">Название композиции</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n\nЗагрузка не удалась. \nПроверьте подключение к интернету</string>
    <string name="button_placeholder_reload_search">Обновить</string>
    <string name="error_of_loading">Error of loading</string>
    <string name="track_cover_art">track cover art</string>
    <string name="separator">separator</string>
    <string name="arrow_back">arrow back</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_listened">Вы искали</string>
    <string name="Country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="text_album">Альбом</string>
    <string name="text_tracktime">Длительность</string>
    <string name="tools_text_value_album">Название альбома</string>
    <string name="tools_text_value_year">2009</string>
    <string name="tools_text_value_genre">Классическая музыка</string>
    <string name="tools_text_country">Азорские острова</string>
    <string name="text_button_like_descript">button like</string>
    <string name="text_button_add_track_descript">button add track</string>
    <string name="text_button_exit_from_screen_descript">button exit from screen</string>
    <string name="text_cover_image_descript">Cover image</string>
    <string name="text_play_pause_button_descript">Play pause button</string>
    <string name="_00_00">00:00</string>
    <string name="No_context_text">Нет контента</string>
    <string name="image_placeholder_favourites_fragment">image_placeholder_favourites_fragment</string>
    <string name="placeholder_text_favourites_is_empty">Ваша медиатека пуста</string>
    <string name="image_placeholder_playlists_fragment">image placeholder playlists fragment</string>
    <string name="placeholder_fragment_playlists_text_button_new_playlist">Новый плейлист</string>
    <string name="text_toolbar_mediateka">Медиатека</string>
    <string name="favourites_tab_text">Избранные треки</string>
    <string name="playlists_tab_text">Плейлисты</string>
    <string name="text_there_is_no_any_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="menu_text_search">Поиск</string>
    <string name="menu_text_mediateka">Медиатека</string>
    <string name="menu_text_settings">Настройки</string>
    <string name="textView_text_create_playlist">Создать</string>
    <string name="edittext_text_description_create_playlist">Описание</string>
    <string name="edittext_text_name_create_playlist">Название*</string>
    <string name="dialogExitTitle">Завершить создание плейлиста?</string>
    <string name="dialogExitMessage">Все несохраненные данные будут потеряны</string>
    <string name="dialogExitCancelButton">Отмена</string>
    <string name="dialogExitAgreeButton">Завершить</string>
    <string name="photopicker">PhotoPicker</string>
    <string name="no_media_selected">No media selected</string>
    <string name="text_new_playlist">Новый плейлист</string>
    <string name="text_add_to_playlist">Добавить в плейлист</string>
    <string name="cover_of_playlist">cover of playlist</string>
    <string name="place_to_add_playlist_cover">place to add playlist cover</string>
    <string name="content_description_playlist_cover">playlist cover</string>
    <string name="content_description_share_button">Share button</string>
    <string name="content_description_properties_button">Properties button</string>
    <string name="playlist_work_fragment_dialog_text_deltrack">Удалить трек</string>
    <string name="playlist_work_fragment_dialog_text_areyousure">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_work_fragment_dialog_text_delete">Удалить</string>
    <string name="playlist_work_fragment_dialog_text_cancel">Отмена</string>
    <string name="text_there_isnt_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="bottomsheet_playlistwork_text_there_isnt_any_tracks">В этом плейлисте нет треков</string>
    <string name="bottom_sheet_work_playlist_menu_text_share">Поделиться</string>
    <string name="bottom_sheet_work_playlist_menu_text_edit">Редактировать информацию</string>
    <string name="bottom_sheet_work_playlist_menu_text_delete_playlist">Удалить плейлист</string>
    <string name="description_image_playlist_cover">Playlist cover</string>
    <string name="playlist_edit_fragment_text_title">Редактировать</string>
    <string name="playlist_edit_fragment_text_button_save">Сохранить</string>
    <string name="share_title_text">Share APK</string>
    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>
    <plurals name="tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
</resources>