<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp61"
    android:gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover_art" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="@dimen/dp14">

            <TextView
                android:id="@+id/track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                tools:text="@string/tools_tint_song_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:textColor="?attr/grayWhite"
                    android:textSize="11sp"
                    tools:text="@string/tools_tint_artist_name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/dot"
                    android:contentDescription="@string/separator" />

                <TextView
                    android:id="@+id/track_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0"
                    android:ellipsize="end"
                    android:fontFamily="@font/yandex_sans_display_regular"
                    android:textColor="?attr/grayWhite"
                    android:textSize="11sp"
                    tools:text="@string/tools_tint_track_time" />
            </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp15"
        android:layout_height="@dimen/dp15"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/dp20"
        android:src="@drawable/icon_settings_arrow_forward"
        app:tint="?attr/grayWhite"
        android:contentDescription="@string/arrow_back" />
</LinearLayout>