<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:paddingTop="@dimen/dp10"
    android:paddingEnd="@dimen/dp14"
    tools:ignore="RtlSymmetry"
    tools:context="com.practicum.playlistmaker.settings.presentation.ui.SettingsFragment"
    >
    <!--    android:forceDarkAllowed="false"
        tools:targetApi="q"-->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="start"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:text="@string/text_settings_header"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/textsize_title_settings_screen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:checked="false"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:paddingEnd="-5dp"
            android:text="@string/text_settings_switch"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/size_text_settings_screen"
            android:textStyle="bold"
            android:theme="@style/SCBSwitch" />

        <TextView
            android:id="@+id/settings_screen_shareapp_textview"
            style="@style/TextViewSettingsScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:layout_marginEnd="2dp"
            android:text="@string/text_settings_share"
            app:drawableEndCompat="@drawable/icon_settings_share" />

        <TextView
            android:id="@+id/settings_screen_send_mail_support_textview"
            style="@style/TextViewSettingsScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:text="@string/text_settings_support"
            app:drawableEndCompat="@drawable/icon_settings_support" />

        <TextView
            android:id="@+id/settings_screen_user_agreement_textview"
            style="@style/TextViewSettingsScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:layout_marginEnd="6dp"
            android:text="@string/text_settings_agreements"
            app:drawableEndCompat="@drawable/icon_settings_arrow_forward" />
    </LinearLayout>

</LinearLayout>