<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp61"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/bottom_sheet_recyclerview_image_cover"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover_art" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp14">

        <TextView
            android:id="@+id/bottom_sheet_recyclerview_playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:maxLines="1"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            tools:text="@string/tools_tint_song_name" />

        <TextView
            android:id="@+id/bottom_sheet_recyclerview_track_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:maxLines="1"
            android:textColor="?attr/grayWhite"
            android:textSize="11sp"
            tools:text="@string/tools_tint_artist_name" />
    </LinearLayout>

</LinearLayout>


