<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="28dp"
    android:paddingStart="16dp"
    android:paddingEnd="14dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="start"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/settings_arrow_back_like_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_arrow_back"
            app:tint="@color/black"
            android:contentDescription="@string/descipt_image_arrow_back_settings_screen">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/text_settings_header"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/yandex_sans_display_regular"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            >

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_settings_menu"
                android:text="@string/text_settings_switch"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:textSize="@dimen/size_text_settings_screen"
                android:textStyle="bold"
                android:paddingEnd="-5dp"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:text="@string/text_settings_share"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:textSize="@dimen/size_text_settings_screen"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/icon_settings_share"
            android:layout_marginEnd="2dp"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:text="@string/text_settings_support"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:textSize="@dimen/size_text_settings_screen"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/icon_settings_support"
            android:layout_marginEnd="0dp"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_settings_menu"
            android:text="@string/text_settings_agreements"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:textSize="@dimen/size_text_settings_screen"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/icon_settings_arrow_forward"
            android:layout_marginEnd="6dp"
            >
        </TextView>
    </LinearLayout>
</LinearLayout>